--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,8 @@ spring.datasource.url=jdbc:h2:mem:testdb
 spring.h2.console.enabled=true
 spring.jpa.show-sql=true
 
+project.image = images/
+
 #spring.jpa.properties.hibernate.format_sql=true
 #spring.jpa.hibernate.ddl-auto=update
 
