--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,14 @@ spring.jpa.show-sql=true
 
 project.image = images/
 
+spring.app.jwtSecretKey=mySecretKey123skuenejsjfoienlejfenenfnfeifn
+spring.app.jwtExpirationInMs=20000000
+
+logging.level.org.springframework=DEBUG
+logging.level.org.hibernate.sql=DEBUG
+logging.level.org.springframework.security=DEBUG
+logging.level.com.ecommerce.project=DEBUG
+
 #spring.jpa.properties.hibernate.format_sql=true
 #spring.jpa.hibernate.ddl-auto=update
 
