--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,7 @@ project.image = images/
 
 spring.app.jwtSecretKey=mySecretKey123skuenejsjfoienlejfenenfnfeifn
 spring.app.jwtExpirationInMs=20000000
+spring.ecom.app.jwtCookieName=springBootEcom
 
 logging.level.org.springframework=DEBUG
 logging.level.org.hibernate.sql=DEBUG
