--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,15 @@
 spring.application.name=sb-ecom
 
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.h2.console.enabled=true
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.h2.console.enabled=true
+
+spring.datasource.url=jdbc:mysql://localhost:3306/ecom-sb
+spring.datasource.username=root
+spring.datasource.password=root
+
 spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 project.image = images/
 
@@ -16,5 +23,4 @@ logging.level.org.springframework.security=DEBUG
 logging.level.com.ecommerce.project=DEBUG
 
 #spring.jpa.properties.hibernate.format_sql=true
-#spring.jpa.hibernate.ddl-auto=update
 
