--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,13 +3,17 @@ spring.application.name=sb-ecom
 #spring.datasource.url=jdbc:h2:mem:testdb
 #spring.h2.console.enabled=true
 
-spring.datasource.url=jdbc:mysql://localhost:3306/ecom-sb
-spring.datasource.username=root
+#spring.datasource.url=jdbc:mysql://localhost:3306/ecom-sb
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/ecom-sb
+spring.datasource.username=postgres
 spring.datasource.password=root
 
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 project.image = images/
 
