--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,17 @@
 spring.application.name=sb-ecom
 
-#spring.datasource.url=jdbc:h2:mem:testdb
-#spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.h2.console.enabled=true
 
 #spring.datasource.url=jdbc:mysql://localhost:3306/ecom-sb
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/ecom-sb
-spring.datasource.username=postgres
-spring.datasource.password=root
+#spring.datasource.url=jdbc:postgresql://localhost:5432/ecom-sb
+#spring.datasource.username=postgres
+#spring.datasource.password=root
 
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.show-sql=true
+#spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
@@ -21,10 +21,10 @@ spring.app.jwtSecretKey=mySecretKey123skuenejsjfoienlejfenenfnfeifn
 spring.app.jwtExpirationInMs=20000000
 spring.ecom.app.jwtCookieName=springBootEcom
 
-logging.level.org.springframework=DEBUG
-logging.level.org.hibernate.sql=DEBUG
+#logging.level.org.springframework=DEBUG
+#logging.level.org.hibernate.sql=DEBUG
 logging.level.org.springframework.security=DEBUG
-logging.level.com.ecommerce.project=DEBUG
+#logging.level.com.ecommerce.project=DEBUG
 
 #spring.jpa.properties.hibernate.format_sql=true
 
