--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 spring.application.name=sb-ecom
 
-#spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.url=jdbc:h2:mem:testdb
 spring.h2.console.enabled=true
 
 #spring.datasource.url=jdbc:mysql://localhost:3306/ecom-sb
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/ecom-sb
-spring.datasource.username=postgres
-spring.datasource.password=root
+#spring.datasource.url=jdbc:postgresql://localhost:5432/ecom-sb
+#spring.datasource.username=postgres
+#spring.datasource.password=root
 
 #spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create-drop
